--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  modal_bottom_sheet: ^2.0.0
-  collection: ^1.15.0
-  universal_platform: ^1.0.0+1
+  modal_bottom_sheet:
+  collection:
+  universal_platform:
 
 flutter:
   assets:
